--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#000000" />
+    <title>Electrofyne AI Face Scan</title>
+    <meta name="description" content="AI-powered skincare analysis and recommendations" />
   </head>
   <body>
     <div id="root"></div>
